--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 env:
-- GOVERSION=1.7.1
-- GOPATH=$HOME/golang-source
-- PATH=$PATH:/usr/local/go/bin:$GOPATH/bin
+  global:
+  - GOVERSION=1.7.1
+  - GOPATH=$HOME/golang-source
+  - PATH=$PATH:/usr/local/go/bin:$GOPATH/bin
 before_install: sudo bash install.sh
 script: python3 test.py
