--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ env:
   - GOVERSION=1.7.1
   - GOPATH=$HOME/golang-source
   - PATH=$PATH:/usr/local/go/bin:$GOPATH/bin
+  - SIMNETDATA=$GOPATH/src/github.com/BitfuryLightning/lnd-simnet-env
+  - SHAREDVOLUME=/var/share
+  - SIMNETCOMMIT=python-grpc-client
 before_install: sudo bash install.sh
 script: python3 test.py
